--- a/src/app/paciente-historicos/informacoes-historicos/informacoes-historicos.component.html
+++ b/src/app/paciente-historicos/informacoes-historicos/informacoes-historicos.component.html
@@ -45,8 +45,8 @@
 <div *ngIf="!processandoOperacao" class="container-fluid mt-5">
     <div class="row">
         <div class="col-12 col-md-6">
-            <app-fieldset-historico-social [previaHistoricoSocial]="historicosPaciente.previaHistoricoSocial" [paciente]="paciente" 
-                [dataProximaAtualizacao]="dataProximaAtualizacaoHistorico.dataProximaAtualizacaoHistoricoSocial">
+            <app-fieldset-historico-social [informacoesPreviasHistoricosSociais]="historicosPaciente.informacoesPreviasHistoricosSociais" 
+                [paciente]="paciente">
             </app-fieldset-historico-social>
         </div>
     </div>
