--- a/src/app/paciente-historicos/informacoes-historicos/informacoes-historicos.component.html
+++ b/src/app/paciente-historicos/informacoes-historicos/informacoes-historicos.component.html
@@ -49,6 +49,12 @@
                 [paciente]="paciente">
             </app-fieldset-historico-social>
         </div>
+
+        <div class="col-12 col-md-6">
+            <app-fieldset-historico-patologia-familiares [paciente]="paciente"
+                [informacoesPreviasHistoricosFamiliaresPorData]="historicosPaciente.informacoesPreviasHistoricosPatologiaFamiliaresPorData">
+            </app-fieldset-historico-patologia-familiares>
+        </div>
     </div>
 </div>
 
