Implementação do fiedset do histórico de atividade física do paciente

--- a/src/app/paciente-historicos/historico-atividade-fisica/fieldset-historico-atividade-fisica/fieldset-historico-atividade-fisica.component.html
+++ b/src/app/paciente-historicos/historico-atividade-fisica/fieldset-historico-atividade-fisica/fieldset-historico-atividade-fisica.component.html
@@ -1,1 +1,133 @@
-<p>fieldset-historico-atividade-fisica works!</p>
+<p-fieldset [toggleable]="true" [collapsed]="true">
+    <p-header>
+        Histórico Atividade Física
+    </p-header>
+
+    <div class="borda-table">
+        <p-table #dataView [value]="historicosAtividadeFisica" [columns]="colunasTabela" [responsive]="true" 
+            [rows]="5" [paginator]="true" class="text-center">
+
+            <ng-template pTemplate="caption">
+                <div class="row">
+                    <div class="col-12 col-sm-6 col-md-10 col-lg-6">
+                        <input type="text" pInputText placeholder="Pesquisa" class="pesquisa" [(ngModel)]="inputPesquisa"
+                            (input)="dataView.filterGlobal($event.target.value, 'contains')">
+                        <i class="fas fa-search" style="font-size: 1.18em;"></i>
+                    </div>
+                </div>
+            </ng-template>
+
+            <ng-template pTemplate="header" let-colunas>
+                <tr>
+                    <th *ngFor="let coluna of colunas" [pSortableColumn]="coluna.field" [ngClass]="coluna.style" class="text-center">
+                        {{ coluna.header }}
+                        <p-sortIcon *ngIf="coluna.header !== 'Ações'" [field]="coluna.field" 
+                            ariaLabel="active to sort"
+                            ariaLabelDesc="Activate to sort in descending order"
+                            ariaLabelAsc="Activate to sort in ascending order">
+                        </p-sortIcon>
+                    </th>
+                </tr>
+            </ng-template>
+
+            <ng-template pTemplate="body" let-historicoAtividadeFisica>
+                <tr>
+                    <td *ngFor="let coluna of colunasTabela" class="text-center">
+                        <span class="ui-column-title text-left"></span>
+                        {{ historicoAtividadeFisica[coluna.field] }}
+        
+                        <span *ngIf="coluna.header === 'Ações'">
+                            <button class="btn btn-primary px-3" pTooltip="Informações" tooltipPosition="bottom" [disabled]="processandoOperacao"
+                                (click)="armazenarHistoricoSelecionadoParaDialogInformacoes(historicoAtividadeFisica)">
+
+                                <i class="fas fa-info"></i>
+                            </button>
+                            <button class="btn btn-danger ml-2" pTooltip="Excluir" tooltipPosition="bottom"
+                                (click)="armazenarHistoricoSelecionadoParaDialogExclusao(historicoAtividadeFisica)">
+                                <i class="fas fa-trash-alt"></i>
+                            </button>
+                        </span>
+                    </td>
+                </tr>
+            </ng-template>
+
+            <ng-template pTemplate="emptymessage" class="text-center" let-historicosAtividadeFisica>
+                <tr>
+                    <td [attr.colspan]="historicosAtividadeFisica.length" class="text-center">
+                        <span *ngIf="!processandoOperacao">
+                            {{ inputPesquisa ? 'Nenhum histórico de atividade física corresponde à pesquisa!' 
+                                : 'Nenhum histórico de atividade física encontrado!' }}
+                        </span>
+
+                        <span *ngIf="processandoOperacao && !inputPesquisaPreviaHistoricos">
+                            <p-progressSpinner strokeWidth="3"></p-progressSpinner>
+                        </span>
+                    </td>
+                </tr>
+            </ng-template>
+
+            <ng-template pTemplate="summary">
+                <div class="col-12">
+                    Históricos Atividade Física encontrados: {{ historicosAtividadeFisica ? historicosAtividadeFisica.length : 0 }}
+                </div>
+                
+                <div *ngIf="historicosAtividadeFisica && historicosAtividadeFisica.length > 0" class="col-12">
+                    Data prevista para próxima atualização: {{ dataProximaAtualizacao }}
+                </div>
+            </ng-template>
+        </p-table>
+    </div>
+</p-fieldset>
+
+
+<!-- Dialog informações Histórico Atividade Física -->
+<p-dialog [visible]="abrirDialogInformacoes" [modal]="true" [resizable]="false" [blockScroll]="true" [draggable]="false"
+    [closable]="false" [style]="{width: '75vh'}">
+
+    <p-header>
+        Informações do Histórico de Atividade Física
+    </p-header>
+
+    <div class="container-fluid">
+        <div><b>Atividade praticada: </b>{{ historicoSelecionado.atividadePraticada }}</div>
+        <div><b>Frequência: </b>{{ historicoSelecionado.frequencia }}</div>
+        <div><b>Duração: </b>{{ historicoSelecionado.duracao }}</div>
+        <div><b>Cadastrado em: </b>{{ historicoSelecionado.dataHoraCadastroAtividadeFisica }}</div>
+    </div>
+
+    <p-footer>
+        <button class="btn btn-danger" (click)="resetarCampos()">
+            <i class="fas fa-arrow-circle-left"></i>
+            Voltar
+        </button>
+    </p-footer>
+</p-dialog>
+
+<!-- Dialog exclusão Histórico Atividade Física -->
+<p-dialog [visible]="abrirDialogExclusao" [modal]="true" [resizable]="false" [blockScroll]="true" [draggable]="false"
+    [closable]="false" [style]="{width: '70vh'}">
+
+    <p-header>
+        Exclusão de Histórico de Atividade Física
+    </p-header>
+
+    <div>
+        Tem certeza que deseja excluir <b>todas</b> as informações do histórico cadastrado em
+        <b>{{ historicoSelecionado.dataHoraCadastroAtividadeFisica }}</b>?
+    </div>
+
+    <p-footer>
+        <button class="btn btn-danger" (click)="resetarCampos()">
+            <i class="fas fa-arrow-circle-left"></i>
+            Voltar
+        </button>
+
+        <button class="btn btn-success" [disabled]="processandoOperacao" 
+        (click)="excluirHistoricoAtividadeFisica()">
+        <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-check-circle'"></i>
+        Confirmar
+    </button>
+    </p-footer>
+</p-dialog>
+
+<app-toasty #toastyComponent></app-toasty>
