--- a/src/app/paciente-historicos/informacoes-historicos/informacoes-historicos.component.html
+++ b/src/app/paciente-historicos/informacoes-historicos/informacoes-historicos.component.html
@@ -56,6 +56,17 @@
             </app-fieldset-historico-patologia-familiares>
         </div>
     </div>
+
+    <div class="row mt-4">
+        <div class="col-12 col-md-6">
+            <app-fieldset-historico-atividade-fisica [paciente]="paciente"
+                [informacoesHistoricosAtividadeFisica]="historicosPaciente.informacoesHistoricosAtividadeFisica">>
+            </app-fieldset-historico-atividade-fisica>
+        </div>
+        <div class="col-12 col-md-6">
+            
+        </div>
+    </div>
 </div>
 
 
